src/test/deca/context/invalid/intermediaire2/mots_reserves/07new.deca
// Description:
// Test du mettre le mot réservé new, en nom de variable.
//
// Resultats:
//  07new.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int new;
}